--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,9 +235,11 @@ html {
     padding-bottom: 15px;
 } 
 .hit-img {
-    height: 200px;
+    height:200px;
     width: 368px;
     display: block;
+        /* padding: 16px; */
+
 }
 
 .hit-img:hover {
